--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 text-align: center;
  border-radius: 20px;
 }
-
+/* skills section starts*/
 .section-title h1{
     text-align: center;
    
@@ -15,13 +15,13 @@ text-align: center;
     color: orangered;
 }
 #cclogo{
-  height: 140px;
-  width: 130px;
+  height: 98px;
+  width: 88px;
   margin-top: 10px;
 }
 #clogo{
-  height: 140px;
-  width: 140px;
+  height: 98px;
+  width: 98px;
   margin-top: 10px;
 }
 .fa-css3-alt{
@@ -84,26 +84,40 @@ text-align: center;
 .col-md-3{
     margin: 30px;
 }
+.skillset{
+    height: 100vh;
+    margin-bottom: px;
+}
+
+/* skills section ends*/
+
+
+/* project section starts */
 #projects{
     margin-top: 100px;
     height: 100vh;
 }
+/* project section ends */
+
+
+
+
+
+/* contact starting */
 .contact{
-height: 100vh;
+    height: 100vh;
+ 
 }
-
-
-/* 
-contact starting */
-
 #contact{
-    background-color:#6f8c84;    
+    background-color:#0ad6dd;   
+    margin: 50px;
+  
 }
 
 #contact .row{
     color:white;
     text-align:right;
-    padding:30px;
+    padding:0px;
 }
 
 #contact h2{
@@ -137,4 +151,15 @@ contact starting */
 .btn{
     border-radius:0px;
     margin-top:15px;
+}
+#contactMe{
+    margin-top: 100px;
+    text-align: center;
+    height: 100vh;
+}
+/* contact ends */
+
+.carousel-inner{
+    margin-top: 50px;
+    align-content: center;
 }
