--- a/main.css
+++ b/main.css
@@ -1,90 +1,105 @@
-#myImage{
-text-align: center;
- border-radius: 20px;
-}
-/* skills section starts*/
-.section-title h1{
+#myImage {
     text-align: center;
-   
+    border-radius: 20px;
 }
 
-.fa-bootstrap{
+/* skills section starts*/
+.section-title h1 {
+    text-align: center;
+
+}
+
+.fa-bootstrap {
     color: purple;
 }
-.fa-html5{
+
+.fa-html5 {
     color: orangered;
 }
-#cclogo{
-  height: 98px;
-  width: 88px;
-  margin-top: 10px;
+
+#cclogo {
+    height: 98px;
+    width: 88px;
+    margin-top: 10px;
 }
-#clogo{
-  height: 98px;
-  width: 98px;
-  margin-top: 10px;
+
+#clogo {
+    height: 118px;
+    width: 118px;
+    margin-top: 10px;
 }
-.fa-css3-alt{
+
+.fa-css3-alt {
     color: blue;
 }
-.fa-js{
+
+.fa-js {
     color: yellow;
 }
-#about{
+
+#about {
     height: 100vh;
 }
 
-.row{
-    text-align:center;
-    margin:0 auto;
+.row {
+    text-align: center;
+    margin: 0 auto;
 }
 
-.row .col-md-6{
-   display:inline-block;
-   vertical-align: middle;
-   float: none;
-} 
+.row .col-md-6 {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
+
 .skillset .icon-box {
     text-align: center;
     background: rgba(204, 204, 204, 0.1);
     padding: 80px 20px;
     transition: all ease-in-out 0.3s;
     border-radius: 20px;
-  }
-  
-  .skillset .icon-box:hover {
+}
+
+.skillset .icon-box:hover {
     background: #b407f8;
     border-color: #66776e;
-  }
+}
 
-#skillset{
+#skillset {
     height: 100vh;
 }
-.icon-box{
+
+.icon-box {
     margin-left: 1000px;
     padding-left: 1000px;
 }
-.row1,.row2{
- text-align: center;
-}
-.container{
-    float: none;
-}
-.row1{
-    text-align:center;
-    margin:0 auto;
+
+.row1,
+.row2 {
+    text-align: center;
 }
 
-.row1 .col-md-3{
-   display:inline-block;
-   vertical-align: middle;
-   float: none;
-   
+.container {
+    float: none;
 }
-.col-md-3{
+
+.row1 {
+    text-align: center;
+    margin: 0 auto;
+}
+
+.row1 .col-md-3 {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+
+}
+
+.col-md-3 {
     margin: 30px;
 }
-.skillset{
+
+.skillset {
     height: 100vh;
     margin-bottom: px;
 }
@@ -94,9 +109,11 @@ text-align: center;
 
 /* project section starts */
 #projects{
-    margin-top: 100px;
+    
     height: 100vh;
+  
 }
+
 /* project section ends */
 
 
@@ -104,103 +121,171 @@ text-align: center;
 
 
 /* contact starting */
-.contact{
+.contact {
     height: 100vh;
- 
+
 }
-#contact{
-    background-color:#0ad6dd;   
+
+#contact {
+    background-color: #0ad6dd;
     margin: 50px;
-  
+
 }
 
-#contact .row{
-    color:white;
-    text-align:right;
-    padding:0px;
+#contact .row {
+    color: white;
+    text-align: right;
+    padding: 0px;
 }
 
-#contact h2{
+#contact h2 {
     font-weight: lighter;
     font-size: 2.5rem;
     line-height: 1.5;
-    padding-bottom:5px;
-    padding-top:0px;
+    padding-bottom: 5px;
+    padding-top: 0px;
 }
 
-#contact label{
-    padding-top:5px;
-    padding-bottom:5px;
+#contact label {
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
-.contact-content{
-    padding:30px;
-}
-.contact-form{
-    padding:30px;
+.contact-content {
+    padding: 30px;
 }
 
-.form-row{
-    padding:5px;
+.contact-form {
+    padding: 30px;
 }
 
-.form-control{
-    border-radius:0px;
+.form-row {
+    padding: 5px;
 }
 
-.btn{
-    border-radius:0px;
-    margin-top:15px;
+.form-control {
+    border-radius: 0px;
 }
-#contactMe{
+
+.btn {
+    border-radius: 0px;
+    margin-top: 15px;
+}
+
+#contactMe {
     margin-top: 100px;
     text-align: center;
     height: 100vh;
 }
+
 /* contact ends */
 
-.carousel-inner{
+.carousel-inner {
     margin-top: 50px;
     align-content: center;
 }
-.fa-github{
+
+.fa-github {
     color: black;
 }
-.fa-linkedin{
+
+.fa-linkedin {
     color: #0a66c2;
 }
-.fa-instagram{
+
+.fa-instagram {
     color: ;
 }
-#socialmedia ul{
-list-style: none;
-display: inline-flex;
-text-align: justify;
+
+#socialmedia ul {
+    list-style: none;
+    display: inline-flex;
+    text-align: justify;
 }
-#socialmedia ul li{
+
+#socialmedia ul li {
     padding: 20px;
 }
-footer{
+
+footer {
     text-align: center;
 }
-#socialmedia{
+
+#socialmedia {
     margin-top: 20vh;
     display: inline-block;
 }
-.social-links{
+
+.social-links {
     margin-top: 20vh;
     text-align: center;
-    
+
 }
-#contact-logo{
+
+#contact-logo {
     height: 20px;
     width: 20px;
-    
+
 }
-.social-links a{
+
+.social-links a {
     padding: 20px;
 }
-#contact-logo1{
+
+#contact-logo1 {
     height: 50px;
 }
 
+.jumbotron {
+    padding-right: 130px;
+    padding-left: 20px;
+    display: block;
+}
+
+body{
+        background: linear-gradient(270deg,#64b3f4, #c2e59c);
+        background-size: 400% 400%;
+    
+        animation: AnimationName 6s ease infinite;
+    }
+    
+    @keyframes AnimationName {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+/* 
+ body {
+    background: #c2e59c;
+
+     background: -webkit-linear-gradient(to right, #64b3f4, #c2e59c); 
+    
+    background: linear-gradient(to right, #64b3f4, #c2e59c);
+  }  */
+  .carousel-control.left, .carousel-control.right {
+    left: 0;
+    z-index: 1;
+  }
+  .card{
+      height: 300px;
+      width: 200px;
+      display: inline-flex;
+      text-align: center;
+      margin: 50px;
+  }
+  .card-deck{
+      text-align: center;
+  }
+  #discord{
+      height: 353.47px;
+      width: 198px;
+  }
+  @media only screen and (max-width: 1024px){
+   #projects {
+       height: 200vh;
+   }
+  }
+  #iot{
+    height: 353.47px;
+    width: 198px;
+  }
